# sophion

./: README.md  hermes-config.example.yaml  pyproject.toml
skills/sophion-study/: SKILL.md
skills/sophion-study/references/: gap-tracking.md
src/sophion/: __init__.py  cli.py  compile.py  config.py  gaps.py  ingest.py  latex_render.py  mcp_server.py  store.py  utils.py
src/sophion/backend/: __init__.py  base.py  claude_code.py
src/sophion/tui/: __init__.py  app.py  async_backend.py  models.py  prompt_builder.py  styles.tcss
src/sophion/tui/widgets/: __init__.py  chat_view.py  message_input.py  sidebar.py  status_bar.py
tests/: conftest.py  test_async_backend.py  test_backend.py  test_cli.py  test_compile.py  test_config.py  test_gaps.py  test_ingest.py  test_latex_render.py  test_mcp_server.py  test_prompt_builder.py  test_store.py  test_tui_integration.py  test_tui_models.py  test_utils.py
